Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#9170 closed bug (fixed)

Resizing to view additional tabs will deadlock DiskUsage

Reported by: mmadia Owned by: stpere
Priority: normal Milestone: R1
Component: Applications/DiskUsage Version: R1/alpha4
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

R1a4.

When there are many drives mounted, not all of them will be displayed in the tab view. Resizing DiskUsage to view those additional drive tabs will result in the application deadlocking.

Change History (2)

comment:1 by stpere, 12 years ago

Resolution: fixed
Status: newclosed

Should be fixed in hrev44854, can you confirm? Thanks!

comment:2 by mmadia, 12 years ago

confirmed! thanks.

Note: See TracTickets for help on using tickets.