DiskUsage: Truncating of tabs could lead to deadlock (#9170)